@@ -3,14 +3,14 @@
   <section ID="line_blocks">
     <sectioninfo/>
     <title>Line blocks</title>
-    <literallayout class="Normal">Lend us a couple of bob till Thursday.
+    <literallayout class="normal">Lend us a couple of bob till Thursday.
 I'm absolutely skint.
 But I'm expecting a postal order and I can pay you back
 as soon as it comes.
 Love, Ewan.
 </literallayout>
     <para>Another one:</para>
-    <literallayout class="Normal">This is a line block.  It ends with a blank line.
+    <literallayout class="normal">This is a line block.  It ends with a blank line.
     New lines begin with a vertical bar ("|").
     Line breaks and initial indent are significant, and preserved.
         Continuation lines are also possible.  A long line that is intended
@@ -18,11 +18,11 @@ to wrap should begin with a space in place of the vertical bar.
     The left edge of a continuation line need not be aligned with
 the left edge of the text above it.
 </literallayout>
-    <literallayout class="Normal">This is a second line block.
+    <literallayout class="normal">This is a second line block.
 Blank lines are permitted internally, but they must begin with a "|".
 </literallayout>
     <para>Take it away, Eric the Orchestra Leader!</para>
-    <literallayout class="Normal">A one, two, a one two three four
+    <literallayout class="normal">A one, two, a one two three four
 Half a bee, philosophically,
     must, *ipso facto*, half not be.
 But half the bee has got to be,
