@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN" "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd">
 <article xmlns="http://docbook.org/ns/docbook">
-  <literallayout class="Normal">This is the first line,
+  <literallayout class="normal">This is the first line,
 and this is the second.</literallayout>
 </article>
