@@ -7,7 +7,7 @@
     <section>
       <title>Test entities and special chars
 </title>
-      <literallayout class="Normal">
+      <literallayout class="normal">
 Anfuehrungszeichen oben 	" 	"
 Ampersand-Zeichen, kaufmaennisches Und 	&amp; 	&amp;
 oeffnende spitze Klammer 	&lt; 	&lt;
