@@ -6,7 +6,7 @@
     </sectioninfo>
     <section>
       <title><anchor ID="line_blocks"/>Line blocks</title>
-      <literallayout class="Normal">Lend us a couple of bob till Thursday.
+      <literallayout class="normal">Lend us a couple of bob till Thursday.
 I'm absolutely skint.
 But I'm expecting a postal order and I can pay you back
 as soon as it comes.
