@@ -202,7 +202,7 @@
           </row>
           <row>
             <entry>
-              <literallayout class="Normal"/>
+              <literallayout class="normal"/>
             </entry>
           </row>
         </tbody>
