@@ -7,6 +7,8 @@
 - Fixed issue #14188: ezcDocumentEzXml::getAsDocbook() returns an
   ezcDocumentEzXml rather than ezcDocumentDocbook
 - Fixed issue #14208: Invalid docubook markup: Attributes used in wrong case
+- Fixed issue #14210: Docbook: literallayout class should be "normal" instead
+  of "Normal"
 
 
 1.1rc1 - Monday 15 December 2008
